--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -535,20 +535,20 @@ jobs:
       fail-fast: false
       matrix:
         job:
-          # - {
-          #     arch: aarch64,
-          #     target: aarch64-linux-android,
-          #     os: ubuntu-20.04,
-          #     extra-build-features: "",
-          #     openssl-arch: android-arm64,
-          #   }
-          # - {
-          #     arch: armv7,
-          #     target: armv7-linux-androideabi,
-          #     os: ubuntu-20.04,
-          #     extra-build-features: "",
-          #     openssl-arch: android-arm,
-          #   }
+          - {
+              arch: aarch64,
+              target: aarch64-linux-android,
+              os: ubuntu-20.04,
+              extra-build-features: "",
+              openssl-arch: android-arm64,
+            }
+          - {
+              arch: armv7,
+              target: armv7-linux-androideabi,
+              os: ubuntu-20.04,
+              extra-build-features: "",
+              openssl-arch: android-arm,
+            }
           - {
               arch: x86,
               target: i686-linux-android,
@@ -556,13 +556,13 @@ jobs:
               extra-build-features: "",
               openssl-arch: android-x86,
             }
-          # - {
-          #     arch: x86_64,
-          #     target: x86_64-linux-android,
-          #     os: ubuntu-20.04,
-          #     extra-build-features: "",
-          #     openssl-arch: android-x64,
-          #   }
+          - {
+              arch: x86_64,
+              target: x86_64-linux-android,
+              os: ubuntu-20.04,
+              extra-build-features: "",
+              openssl-arch: android-x64,
+            }
     steps:
       - name: Export GitHub Actions cache environment variables
         uses: actions/github-script@v6
