--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -8,7 +8,7 @@ on:
         default: true
       upload-tag:
         type: string
-        default: "nightly_185_2"
+        default: "nightly_147"
 
 env:
   CARGO_NDK_VERSION: "3.1.2"
